--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.0.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.57.0",
+    "swiper": "^11.2.8",
     "zod": "^3.25.56"
   },
   "devDependencies": {
